fix: styling scrollbar

--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -6,3 +6,21 @@
     display: none;
   }
 }
+
+.custom-scroll {
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 3px solid transparent;
+  }
+}
